	* sysdeps/ieee754/dbl-64/Makefile: New file.
	* sysdeps/x86_64/fpu/multiarch/Makefile (libm-sysdep_routines):
	Remove brandred-fma4.
	(CFLAGS-brandred-fma4.c): Remove.
	* sysdeps/x86_64/fpu/multiarch/brandred-fma4.c: Remove.
	* sysdeps/x86_64/fpu/multiarch/s_sin-fma4.c (__branred): Don't
	define.
	* sysdeps/x86_64/fpu/multiarch/s_tan-fma4.c (__branred): Don't
	define.

2012-02-27  David S. Miller  <davem@davemloft.net>

	* sysdeps/ieee754/ldbl-128/s_nearbyintl.c (__nearbyintl): Do not
	manipulate bits before adding and subtracting TWO112[sx].
	* sysdeps/ieee754/ldbl-128/s_rintl.c (__rintl): Likewise.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #2547]
	[BZ #11365]
	* sysdeps/ieee754/flt-32/s_nearbyintf.c (__nearbyintf): Do not
	manipulate bits before adding and subtracting TWO23[sx].
	* math/libm-test.inc (nearbyint_test): Add more tests.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #2548]
	* sysdeps/ieee754/flt-32/s_rintf.c (__rintf): Do not manipulate
	bits before adding and subtracting TWO23[sx].
	* math/libm-test.inc (rint_test): Add more tests.
	(rint_test_tonearest): Likewise.
	(rint_test_towardzero): Likewise.
	(rint_test_downward): Likewise.
	(rint_test_upward: Likewise.

2012-02-21  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: More jn test ULP updates.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.

2012-02-19  Aurelien Jarno  <aurelien@aurel32.net>

	* math/w_acos.c: Use non-signaling floating-point comparisons.
	* math/w_acosf.c: Likewise.
	* math/w_acosh.c: Likewise.
	* math/w_acoshf.c: Likewise.
	* math/w_acoshl.c: Likewise.
	* math/w_acosl.c: Likewise.
	* math/w_asin.c: Likewise.
	* math/w_asinf.c: Likewise.
	* math/w_asinl.c: Likewise.
	* math/w_atanh.c: Likewise.
	* math/w_atanhf.c: Likewise.
	* math/w_atanhl.c: Likewise.
	* math/w_exp2.c: Likewise.
	* math/w_exp2f.c: Likewise.
	* math/w_exp2l.c: Likewise.
	* math/w_j0.c: Likewise.
	* math/w_j0f.c: Likewise.