@@ -10,7 +10,7 @@ Version 2.15.1
 * The following bugs are resolved with this release:
 
   411, 2547, 2548, 11365, 11494, 13583, 13731, 13732, 13733, 13747, 13748,
-  13749, 13753, 13771, 13774, 14059, 14167
+  13749, 13753, 13771, 13774, 13786, 14059, 14167
 
 Version 2.15
 
